# avexis_control

./: CMakeLists.txt  package.xml
config/: propeller_control.yaml  propeller_control.yaml~  thruster_controller.yaml~
launch/: avexis1_propeller_controllers.launch  avexis1_propeller_controllers.launch~
