<?xml version="1.0"?>
<package>
  <name>avexis1_control</name>
  <version>0.0.0</version>
  <description>The avexis1_control package</description>

  <maintainer email="noobaca2@gmail.com">Devon Ash</maintainer>
  <license>BSD</license>

  <author email="noobaca2@gmail.com">Devon Ash</author>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
